@@ -1,66 +1,41 @@
 {
-  "count": 66,
-  "uniques": 19,
+  "count": 21,
+  "uniques": 9,
   "views": [
     {
-      "timestamp": "2024-02-22T00:00:00Z",
+      "timestamp": "2024-04-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2024-02-23T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-02-24T00:00:00Z",
-      "count": 19,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-02-25T00:00:00Z",
-      "count": 13,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-28T00:00:00Z",
-      "count": 6,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-02-29T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-03-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-05T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-03-06T00:00:00Z",
+      "timestamp": "2024-04-03T00:00:00Z",
       "count": 4,
-      "uniques": 3
+      "uniques": 2
     },
     {
-      "timestamp": "2024-03-07T00:00:00Z",
-      "count": 14,
+      "timestamp": "2024-04-04T00:00:00Z",
+      "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-04-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-09T00:00:00Z",
+      "count": 11,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-04-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
